--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
-body {
+.body {
     font-family: Arial, Helvetica, sans-serif;
     background-image: url("../images/leg_press.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
     background-position: center;
-    height: 600px;
+    height: 789px;
 }
 
 html {
