--- a/css/training.css
+++ b/css/training.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #232B2B;
+    background-color: #232b2b;
 }
 
 
@@ -41,99 +41,28 @@ html {
     background-color: #111;
 }
 
+.features-list {
+	grid-template-columns: repeat(2,1fr);
+	list-style-type: none;
+  }
 
-
-
-.cards_wrap{
-	padding: 20px;
-	width: 100%;
-	display: flex;
+.features-list {
+	display: grid;
+	grid-template-columns: repeat(3,300px);
+	grid-gap: 30px;
+	-webkit-justify-content: space-between;
+	-moz-box-pack: justify;
 	justify-content: space-between;
-	flex-wrap: wrap;
+    margin: 56px 10px 10px 10px;
 }
-
-.cards_wrap .card_item{
-	padding: 15px 25px;
-	width: 25%;
-}
-
-.cards_wrap .card_inner{
-	background: #fff;
-	border-radius: 5px;
-	padding: 35px 20px;
-	min-width: 225px;
-	min-height: 315px;
-	max-height: 370px;
-	width: 100%;
-}
-
-.cards_wrap .card_item img{
-	width: 80px;
-	height: 80px;
-	margin-bottom: 5px;
-}
-
-.cards_wrap .card_item .role_name{
-	font-weight: 900;
-	letter-spacing: 2px;
-	text-transform: uppercase;
-	font-size: 20px;
-	white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.cards_wrap .card_item .real_name{
-	color: #3d4041;
-	font-size: 18px;
-	font-weight: 100;
-	margin: 5px 0 10px;
-}
-
-.cards_wrap .card_item .film{
-	font-size: 14px;
-	line-height: 24px;
-	color: #7b8ca0;
-}
-
-@media screen and (max-width: 1024px){
-	.cards_wrap .card_item{
-		width: 33%;
-	}
-}
-
-@media screen and (max-width: 768px){
-	.cards_wrap .card_item{
-		width: 50%;
-	}
-	.wrapper .header{
-		font-size: 16px;
-		height: 60px;
-	}
-}
-
-@media screen and (max-width: 568px){
-	.cards_wrap .card_item{
-		width: 100%;
-	}
-	.wrapper .header{
-		font-size: 14px;
-	}
+.features--light {
+	color: #000;
 }
 
 
-
-.wrapper .header{
-	width: 100%;
-	height: 50px;
-	background: #e36686;
-	color: #fff;
-	text-align: center;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 20px;
-	text-transform: uppercase;
-	letter-spacing: 5px;
-	font-weight: 900;
-}
+.features-title {
+	max-width: 624px;
+	color: #012f9b;
+	margin-bottom: 24px;
+    font-size: 50px;
+  }
